<resources>
    <string name="app_name">沃能快充</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="save">保存</string>
    <string name="nextstep">下一步</string>
    <string name="agree">同意</string>
    <string name="password">密　码</string>
    <string name="msg_checknum">短信验证码</string>
    <string name="setting">设置</string>
    <string name="login_hint">请输入电话号码</string>
    <string name="pwd_hint">请输入密码</string>

    <string name="recharge">充电</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
</resources>
