<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.optimumnano.quickcharge.activity.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="@dimen/dp_40">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/shape_maincolor_kuang"
            >
            <EditText
                android:id="@+id/login_edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/login_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape_maincolor_kuang"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="2dp">
            <EditText
                android:id="@+id/login_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:padding="@dimen/dp_10"/>
        </LinearLayout>

        <TextView
            android:id="@+id/login_tvForgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/forgetpwd"
            android:textColor="@color/main_color"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/login_tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/dp_14"/>
        <TextView
            android:id="@+id/login_tvReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/ButtonStyle1"
            android:layout_marginTop="@dimen/dp_14"/>


    </LinearLayout>
</RelativeLayout>
